2011-04-12  Ingo Renner  <ingo.renner@dkd.de>

	* Cleaned up solrconfig.xml, removed unnecessary example configuration, enabled php and phpcs response writers, data import handler

2011-04-06  Ingo Renner  <ingo.renner@dkd.de>

	* Updated schema.xml and solrconfig.xml to match the EAP version

2011-02-28  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed an issue which resulted in sorting not working anymore

2011-02-22  Ingo Renner  <ingo.renner@dkd.de>

	* Changed version number to 1.4.0-dev

2011-02-22  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v1.3.0

	* Added tx_solr_AdditionalFieldsIndexer to take care of indexing fields as defined in plugin.tx_solr.index.additionalFields
	* Removed unused method tx_solr_Typo3Environment::isFileadminEnabledWhileUsingDam()
	* Added refactored indexer
	* Added utility method tx_solr_Util::getRootPageId()
	* Added a way to register additional plugin commands
	* Renamed tx_solr_Command interface to tx_solr_PluginCommand
	* Changed the command resolver to support loading commands registered through registerPluginCommand()
	* Added a plugin that provides a search input field, credits Timo Schmidt
	* Fixed issue #12543: Facets links "Show more" not working (results page), credits Pierrick Caillon
	* Added support to replace the core search content element with the EXT:solr search plugin
	* Fixed issue #13141: Can't use devLog when an exception involing tx_solr_query is logged, credits Pierrick Caillon
	* Fixed issue #10665, changed handling of multiple word queries, escpaes phrases only when quotes are found at the beginning and end of a query
	* Added support for boost query bq parameter
	* Fixed issue #9971: suggest ignores search.filter
	* !!! Changed interface tx_solr_FacetsModifier and moved the corresponding hook from tx_solr_pi_results_FacetingCommand to tx_solr_Search
	* Added a check for Solr responses and throwing an exception if no response could be received, credits Marcus Krause