@@ -1,3 +1,7 @@
+2012-05-16  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Updated install-solr.sh to use the current tomcat version and Solr plugin install directory
+
 2011-04-12  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Cleaned up solrconfig.xml, removed unnecessary example configuration, enabled php and phpcs response writers, data import handler
